--- a/src/main/java/view/exception/userNotFound.html
+++ b/src/main/java/view/exception/userNotFound.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 <head>
-    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/javascript; charset=UTF8">
     <title>Вход</title>
     <meta charset="UTF-8">
 </head>
-<body>
-<p>Пользователь не найден. Попробуйте еще раз</p><br>
+<body align = 'center'>
+<p id = 'data'>Пользователь не найден</p>
 <a href="/">Повторить ввод паспортных данных</a>
 </body>
 </html>
