--- a/src/main/java/view/pagesForUser/welcome.html
+++ b/src/main/java/view/pagesForUser/welcome.html
@@ -5,8 +5,8 @@
     <title>Welcome</title>
     <meta charset="UTF-8">
 </head>
-<body>
-    <p>Добро пожаловать, </p><br>
+<body align = 'center'>
+    <p>Добро пожаловать</p><br>
     <a href="/pagesForResult/addNewCard">Добавить новую карту</a><br>
     <a href="/pagesForResult/checkBalance">Проверить баланс счета</a><br>
     <a href="/pagesForResult/findAllCards">Показать все карты</a><br>
