--- a/src/main/java/view/pagesForUser/pagesForResult/checkBalance.html
+++ b/src/main/java/view/pagesForUser/pagesForResult/checkBalance.html
@@ -6,20 +6,30 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<form name="auto" method="post" id = 'auto' action="/pagesForResult/checkBalance">
+<form name="auto" method="post" id = 'auto' align = 'center' onsubmit="sendJSON()">
+    <p><b>Введите номер и серию паспорта</b><br>
+        <input name ="passport" type="text" size="40" id = "passport">
     <p><b>Введите номер счета</b><br>
-        <input name ="number" type="text" size="40" id = "number">
+        <input name ="account" type="text" size="40" id = "account">
     <p><input type="submit" value="Ввод" onclick="sendJSON()">
 </form>
 <script type="text/javascript">
     function sendJSON() {
-        var obj, dbParam, xmlhttp;
-        obj = {"number": document.getElementById("number").value};
-        dbParam = JSON.stringify(obj);
+        let form = document.forms["auto"];
+        let fd = new FormData(form);
+        let data = {};
+        for (let [key, prop] of fd) {
+            data[key] = prop;
+        }
+        data = JSON.stringify(data, null, 2);
+
+        let xmlhttp;
+        window.location.href = "http://localhost:8001/pagesForResult/checkBalance/result";
         xmlhttp = new XMLHttpRequest();
-        xmlhttp.open('POST', '/pagesForResult/checkBalance', true);
-        xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-        xmlhttp.send(dbParam);
+        xmlhttp.open("POST", "/pagesForResult/checkBalance/result", true);
+        xmlhttp.setRequestHeader("Content-type", "application/json");
+        xmlhttp.send(data);
+        return false;
     }
 </script>
 </body>
